policygenerator/policy-sets/community/kyverno/security/input/require-run-as-non-root-user/restrictions/restrict-redteam-to-its-appproject-hub.yaml
# WARNING: ClusterPolicy was DEPRECATED in Kyverno v1.17
# To update your policy, browse the official Kyverno policy collection 
# for current examples: https://kyverno.io/policies

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-redteam-to-its-appproject
spec:
  validationFailureAction: enforce
  background: false
  rules:
  - name: restrict-to-argoproject
    match:
      resources:
        kinds:
        - ApplicationSet  
      subjects:
      - kind: Group
        name: red-sre-group
    validate:
      message: "For any `red-sre-group` member, creation of ArgoCD Application must be against the `redteam` AppProject."
      pattern:
        spec:
          template:
            spec:
              project: redteam
